attempt to fix all images on mobile

--- a/default.css
+++ b/default.css
@@ -25,7 +25,7 @@ i {
 
 img {
     width: 80%;
-    height: auto;
+    height: 80%;
     max-width: 80vw;
     border-radius: 1.5%;
 }
